Business category filter fix, Admin list endpoints for businesses/updates, Saved Items API with saved-state check