@@ -1,18 +1,19 @@
 package com.dak.backend.service;
 
 import com.dak.backend.domain.Business;
+import com.dak.backend.dto.AdminBusinessSummaryResponse;
 import com.dak.backend.dto.BusinessDetailResponse;
 import com.dak.backend.dto.UpdateBusinessStatusRequest;
 import com.dak.backend.exception.ApiException;
 import com.dak.backend.repository.BusinessRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
-import com.dak.backend.dto.BusinessCategoryResponse;
 
 @Service
 public class AdminBusinessService {
@@ -23,13 +24,21 @@ public class AdminBusinessService {
         this.businessRepository = businessRepository;
     }
 
+    @Transactional(readOnly = true)
+    public Page<AdminBusinessSummaryResponse> listAll(String status, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, Math.min(pageSize, 100));
+        Page<Business> businesses = (status != null)
+                ? businessRepository.findByStatus(status, pageable)
+                : businessRepository.findAll(pageable);
+
+        return businesses.map(b -> new AdminBusinessSummaryResponse(b.getId(), b.getName(), b.getSlug(), b.getStatus()));
+    }
+
     @Transactional
     public BusinessDetailResponse updateStatus(UUID businessId, UpdateBusinessStatusRequest request) {
         Business business = businessRepository.findById(businessId)
                 .orElseThrow(() -> ApiException.notFound("Business not found."));
 
-        // Publishing requires at least one category, per 04 Database Design §8.2.3
-        // ("At least one category may be required before a Business can be published").
         if ("PUBLISHED".equals(request.status()) && business.getCategories().isEmpty()) {
             throw ApiException.badRequest("MISSING_CATEGORY",
                     "A business must have at least one category before it can be published.");
@@ -41,9 +50,9 @@ public class AdminBusinessService {
     }
 
     private BusinessDetailResponse toDetail(Business b) {
-        List<BusinessCategoryResponse> categories = b.getCategories().stream()
-                .map(c -> new BusinessCategoryResponse(c.getId(), c.getName(), c.getSlug()))
-                .collect(Collectors.toList());
+        List<com.dak.backend.dto.BusinessCategoryResponse> categories = b.getCategories().stream()
+                .map(c -> new com.dak.backend.dto.BusinessCategoryResponse(c.getId(), c.getName(), c.getSlug()))
+                .toList();
 
         return new BusinessDetailResponse(
                 b.getId(), b.getName(), b.getSlug(), b.getShortDescription(), b.getDescription(),
